# lz4-bytes

./: .gitignore  CHANGELOG.md  lz4-bytes.cabal
.github/workflows/: build.yaml
cbits/: hs_lz4.c
src/Lz4/: Block.hs  Frame.hs  Internal.hs
test/: Main.hs
