cabal-version:      2.2
name:               lz4-bytes
version:            0.1.1.1
synopsis:           Bindings to LZ4
description:
  This library is similar to the @lz4@ library except that it works
  with the @Bytes@ type from @byteslice@ rather than @ByteString@.
  Also, this library has some amount of support for LZ4 frames.

homepage:           https://github.com/byteverse/lz4-bytes
bug-reports:        https://github.com/byteverse/lz4-bytes/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrew Martin
maintainer:         amartin@layer3com.com
copyright:          2020 Andrew Martin
category:           Data
build-type:         Simple
extra-source-files:
  cbits/lz4.h
  cbits/lz4hc.h

extra-doc-files:    CHANGELOG.md
tested-with:        GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

library
  import:          build-settings
  other-modules:   Lz4.Internal
  exposed-modules:
    Lz4.Block
    Lz4.Frame

  build-depends:
    , base        >=4.12  && <5
    , byte-order  >=0.1.3 && <0.2
    , byteslice   >=0.1.4 && <0.3
    , primitive   >=0.7   && <0.10
    , run-st      >=0.1.1 && <0.2

  hs-source-dirs:  src
  include-dirs:    cbits
  ghc-options:     -O2
  c-sources:
    cbits/hs_lz4.c
    cbits/lz4.c
    cbits/lz4hc.c

test-suite test
  import:         build-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base              >=4.11.1 && <5
    , byteslice
    , lz4-bytes
    , tasty
    , tasty-quickcheck

source-repository head
  type:     git
  location: git://github.com/byteverse/lz4-bytes.git
